// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Collapsed renders correctly 1`] = `
<jest>
  <dialog
    class="ecl-modal"
    data-ecl-auto-init="Modal"
    data-ecl-modal-toggle="modal-toggle"
    id="modal-example"
  >
    <div
      class="ecl-modal__container ecl-container"
    >
      <div
        class="ecl-modal__content ecl-col-12 ecl-col-m-8 ecl-offset-m-2 ecl-col-l-6 ecl-offset-l-3"
      >
        <header
          class="ecl-modal__header"
        >
          <div
            class="ecl-modal__header-content"
          >
            Lorem ipsum dolor sit amet
          </div>
          <button
            class="ecl-button ecl-button--ghost ecl-modal__close ecl-button--icon-only"
            data-ecl-modal-close=""
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Close
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--s ecl-button__icon"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#close-filled"
                />
              </svg>
            </span>
          </button>
        </header>
        <div
          class="ecl-modal__body"
        >
          Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet.
        </div>
        <footer
          class="ecl-modal__footer"
        >
          <div
            class="ecl-modal__footer-content"
          >
            <button
              class="ecl-button ecl-button--secondary ecl-modal__button"
              data-ecl-modal-close=""
              type="button"
            >
              Secondary action
            </button>
            <button
              class="ecl-button ecl-button--primary ecl-modal__button"
              type="submit"
            >
              Primary action
            </button>
          </div>
        </footer>
      </div>
    </div>
  </dialog>
</jest>
`;

exports[`Modal Collapsed renders correctly with extra attributes 1`] = `
<jest>
  <dialog
    class="ecl-modal"
    data-ecl-auto-init="Modal"
    data-ecl-modal-toggle="modal-toggle"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="modal-example"
  >
    <div
      class="ecl-modal__container ecl-container"
    >
      <div
        class="ecl-modal__content ecl-col-12 ecl-col-m-8 ecl-offset-m-2 ecl-col-l-6 ecl-offset-l-3"
      >
        <header
          class="ecl-modal__header"
        >
          <div
            class="ecl-modal__header-content"
          >
            Lorem ipsum dolor sit amet
          </div>
          <button
            class="ecl-button ecl-button--ghost ecl-modal__close ecl-button--icon-only"
            data-ecl-modal-close=""
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Close
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--s ecl-button__icon"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#close-filled"
                />
              </svg>
            </span>
          </button>
        </header>
        <div
          class="ecl-modal__body"
        >
          Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet.
        </div>
        <footer
          class="ecl-modal__footer"
        >
          <div
            class="ecl-modal__footer-content"
          >
            <button
              class="ecl-button ecl-button--secondary ecl-modal__button"
              data-ecl-modal-close=""
              type="button"
            >
              Secondary action
            </button>
            <button
              class="ecl-button ecl-button--primary ecl-modal__button"
              type="submit"
            >
              Primary action
            </button>
          </div>
        </footer>
      </div>
    </div>
  </dialog>
</jest>
`;

exports[`Modal Collapsed renders correctly with extra class names 1`] = `
<jest>
  <dialog
    class="ecl-modal custom-class custom-class--test"
    data-ecl-auto-init="Modal"
    data-ecl-modal-toggle="modal-toggle"
    id="modal-example"
  >
    <div
      class="ecl-modal__container ecl-container"
    >
      <div
        class="ecl-modal__content ecl-col-12 ecl-col-m-8 ecl-offset-m-2 ecl-col-l-6 ecl-offset-l-3"
      >
        <header
          class="ecl-modal__header"
        >
          <div
            class="ecl-modal__header-content"
          >
            Lorem ipsum dolor sit amet
          </div>
          <button
            class="ecl-button ecl-button--ghost ecl-modal__close ecl-button--icon-only"
            data-ecl-modal-close=""
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Close
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--s ecl-button__icon"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#close-filled"
                />
              </svg>
            </span>
          </button>
        </header>
        <div
          class="ecl-modal__body"
        >
          Sed quam augue, volutpat sed dapibus in, accumsan a arcu. Nulla quam enim, porttitor at neque a, egestas porttitor tortor. Nam tortor sem, elementum id augue quis, posuere vestibulum dui. Donec id posuere libero, sit amet egestas lorem. Aliquam finibus ipsum mauris, a molestie tortor laoreet.
        </div>
        <footer
          class="ecl-modal__footer"
        >
          <div
            class="ecl-modal__footer-content"
          >
            <button
              class="ecl-button ecl-button--secondary ecl-modal__button"
              data-ecl-modal-close=""
              type="button"
            >
              Secondary action
            </button>
            <button
              class="ecl-button ecl-button--primary ecl-modal__button"
              type="submit"
            >
              Primary action
            </button>
          </div>
        </footer>
      </div>
    </div>
  </dialog>
</jest>
`;
